fix: remove double scroll from inner_programacao

--- a/public/assets/css/editar/editar.css
+++ b/public/assets/css/editar/editar.css
@@ -2068,8 +2068,6 @@ details summary::-webkit-details-marker {
   border: none;
   padding: 0;
   margin: 0;
-  max-height: 60px;
-  overflow-y: auto;
 }
 
 .checkbox-label {
